# Physiotelepy

./: .gitattributes  CMakeLists.txt  README.txt  run_debug.ps1
Dependencies/Glad/include/glad/: glad.c  glad.h
nuitrack/data/: FABRIKSkeleton.xml  Log.txt  e24b869c-24d3-11e7-a5ba-0be3e69c8ecb  kinematic_filter.xml  license.json  nuitrack.config  nuitrack_local.config  skeleton.xml  skeleton_limits.xml
nuitrack/data/MovingSensor/: asus_rgbd.yaml  structure_rgbd.yaml
nuitrack/data/facerec/conf/facerec/: age_gender_estimator.xml  common_capturer4_fda.xml  common_capturer4_fda_singleface.xml  common_capturer4_lbf.xml  common_capturer4_lbf_singleface.xml  common_video_capturer_fda.xml  common_video_capturer_lbf.xml  emotions_estimator.xml  face_quality_estimator.xml  fda_tracker_capturer.xml  manual_capturer_fda.xml
nuitrack/data/handtracker/: lisa.xml  svm_grab.xml
nuitrack/data/poseoptimization/: skeleton.xml
src/: Application.cpp  ApplicationState.h  DBApi.cpp  DBApi.h  DiskHelper.cpp  DiskHelper.h  NuitrackGL.cpp  NuitrackGL.h  NuitrackGLSample.cpp  NuitrackGLSample.h  OpenGLTest.cpp  UserInteraction.cpp  UserInteraction.h  main.cpp  nuitrack.config  opgl.cpp  opgl.h
src/glad/: glad.c
src/imgui/: imconfig.h
